--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -12,6 +12,55 @@
 
 <h3>AuxDesk</h3>
 
+<!-- Modal -->
+<div class="modal fade" id="modal_NewTask" tabindex="-1">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Create task</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" aria-label="Text input with dropdown button" placeholder="Title..." @bind="taskTitle">
+                    <div class="dropdown">
+                        <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button">
+                            @selectedPriority
+                        </button>
+                        <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
+                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(1))">High</a></li>
+                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(2))">Medium</a></li>
+                            <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="input-group mb-3">
+                    <span class="input-group-text" @bind="taskDate" id="inputGroup-sizing-default">Start Date</span>
+                    <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate">
+                </div>
+
+                <div class="input-group" style="height:30vh">
+                    <textarea class="form-control" aria-label="With textarea" placeholder="Notes" @bind="taskNotes"></textarea>
+                </div>
+
+                <div class="btn-toolbar" role="toolbar" style="margin-top:16px">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary" @onclick="CreateTask">Create</button>
+                    </div>
+                    <div class="btn-group" style="padding-left:8px">
+                        @* <button type="button" class="btn btn-danger" @onclick="CancelTask">Cancel</button> *@
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="row gx-3">
     <div class="col">
         <div class="p-2">
@@ -22,7 +71,8 @@
                         <span class="input-group-text" id="inputGroup-sizing-default">Date</span>
                         <input type="date" class="form-control" aria-label="Sizing example input" @onchange="SelectDate" value="@taskDate.ToString("yyyy-MM-dd")" aria-describedby="inputGroup-sizing-default">
                     </div>
-                    <button type="button" class="btn btn-primary mt-2 mb-2" style="width:100%" @onclick="DirectToNewTask"><b>+</b></button>
+                    <!-- Button trigger modal -->
+                    <button type="button" class="btn btn-primary mt-2 mb-2" data-bs-toggle="modal" data-bs-target="#modal_NewTask" style="width:100%"><b>+</b></button>
                 </div>
                 <div class="row row-cols-2 content-scrollable">
             @foreach (TaskItem userTask in listTaskItems)
@@ -153,6 +203,8 @@
     private string selectedStatus = "Not started";
 
     //
+    private string? taskTitle;
+    private string? taskNotes;
     private List<TaskItem> listAllTaskItems = new();
     private List<TaskItem> listTaskItems = new();
     private List<DeletedTaskItem> listDeletedTaskItems = new();
@@ -171,10 +223,10 @@
         TaskMetaData();
     }
 
-    private void DirectToNewTask()
-    {
-        _navigationManager.NavigateTo("/newTask");
-    }
+    // private void DirectToNewTask()
+    // {
+    //     _navigationManager.NavigateTo("/newTask");
+    // }
 
     private void SelectDate(ChangeEventArgs e)
     {
@@ -343,5 +395,47 @@
             selectedStatus = "In progress";
         }
         else { selectedStatus = "Done"; }
+    }
+
+    private async void CreateTask()
+    {
+        TaskItem newTaskItem = new();
+
+        newTaskItem.TaskGUID = Guid.NewGuid().ToString();
+        newTaskItem.Title = taskTitle;
+        newTaskItem.Notes = taskNotes;
+        newTaskItem.Priority = taskPriority;
+        newTaskItem.AssignedDate = taskDate;
+
+        // Validate on domain layer
+        string validationMessage = string.Empty;
+        bool bInvalid = false;
+        if (string.IsNullOrEmpty(newTaskItem.Title))
+        {
+            validationMessage += "Title is required.";
+            bInvalid = true;
+        }
+        if (newTaskItem.AssignedDate == null)
+        {
+            validationMessage += " Valid date is required.";
+            bInvalid = true;
+        }
+        if (bInvalid)
+        {
+            await App.Current.MainPage.DisplayAlert("Validation Error", validationMessage, "OK");
+            return;
+        }
+
+        if (listTaskItems.Count == 0)
+        {
+            listTaskItems = await _taskService.GetTaskItemsAsync(null);
+        }
+
+        await _taskService.SaveTaskItemAsync(listTaskItems, newTaskItem);
+
+        taskTitle = string.Empty;
+        taskNotes = string.Empty;
+
+        await App.Current.MainPage.DisplayAlert("Task Saved", "Task saved sucessfully", "OK");
     }
 }
