--- a/Components/Pages/Desk.razor
+++ b/Components/Pages/Desk.razor
@@ -40,22 +40,22 @@
                     <input type="date" class="form-control" aria-label="Sizing example input" @bind="taskDate">
                 </div>
 
-                <div class="input-group" style="height:30vh">
+                <div class="input-group" style="min-height:40vh">
                     <textarea class="form-control" aria-label="With textarea" placeholder="Notes" @bind="taskNotes"></textarea>
                 </div>
 
-                <div class="btn-toolbar" role="toolbar" style="margin-top:16px">
+                @* <div class="btn-toolbar" role="toolbar" style="margin-top:16px">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-primary" @onclick="CreateTask">Create</button>
+                        
                     </div>
                     <div class="btn-group" style="padding-left:8px">
-                        @* <button type="button" class="btn btn-danger" @onclick="CancelTask">Cancel</button> *@
+                        
                     </div>
-                </div>
+                </div> *@
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" @onclick="CreateTask">Create</button>
+                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
@@ -143,16 +143,6 @@
                 <div class="header-fixed">
                     <div class="input-group mb-3">
                         <input type="text" class="form-control" placeholder="Title..." @bind="@selectedTaskItem.Title" disabled>
-                        <div class="dropdown">
-                            <button class="btn btn-outline-secondary dropdown-toggle" @onclick="ToggleDropdownPriority" type="button" disabled>
-                                @selectedPriority
-                            </button>
-                            <ul class="dropdown-menu @(isDropdownOpenPriorty ? "show" : "")" style="@(isDropdownOpenPriorty ? "position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(0px, 40px, 0px);" : "")">
-                                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(1))">High</a></li>
-                                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(2))">Medium</a></li>
-                                <li><a class="dropdown-item" @onclick="@(() => SelectPriority(3))">Low</a></li>
-                            </ul>
-                        </div>
                     </div>
                     <div class="row">
                         <div class="input-group mb-3 text-center col">
@@ -203,8 +193,6 @@
     private string selectedStatus = "Not started";
 
     //
-    private string? taskTitle;
-    private string? taskNotes;
     private List<TaskItem> listAllTaskItems = new();
     private List<TaskItem> listTaskItems = new();
     private List<DeletedTaskItem> listDeletedTaskItems = new();
@@ -213,6 +201,11 @@
     private int NotStartedTasks;
     private int InProgressTasks;
     private int TotalTasks;
+    //
+
+    // New task modal fields
+    private string? taskTitle;
+    private string? taskNotes;
     //
 
 
@@ -426,16 +419,20 @@
             return;
         }
 
-        if (listTaskItems.Count == 0)
+        if (listAllTaskItems.Count == 0)
         {
-            listTaskItems = await _taskService.GetTaskItemsAsync(null);
+            listAllTaskItems = await _taskService.GetTaskItemsAsync(null);
         }
 
-        await _taskService.SaveTaskItemAsync(listTaskItems, newTaskItem);
+        await _taskService.SaveTaskItemAsync(listAllTaskItems, newTaskItem);
 
         taskTitle = string.Empty;
         taskNotes = string.Empty;
 
         await App.Current.MainPage.DisplayAlert("Task Saved", "Task saved sucessfully", "OK");
+
+        LoadTaskItems();
+        TaskMetaData();
+        StateHasChanged();
     }
 }
